Tests: Emit coreAboutToClose() before exiting

Now address sanitizer will not show false positives.

Change-Id: Ieeb4dc31697920ed1ca542f5647f4cb0b23a29ab
Task-number: QTCREATORBUG-14713
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>